--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead">
+    <header id="home" class="masthead">
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading" style="font-family:Stencil Std, fantasy;">T E C H N  I T E S</div>
